# ds_vscode_starter

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  git_guide.txt  pyproject.toml  requirements.txt
notebooks/: 00_quick_demo.ipynb
scripts/: ci.sh
src/app/: __init__.py  core.py  streamlit_app.py
tests/: test_core.py
